--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ dependencies:
   firebase_messaging: ^11.4.1
   device_info_plus: ^3.2.4
   google_maps_flutter: ^2.1.7
-  flutter_html:
+  http:
 
 dev_dependencies:
   flutter_test:
