--- a/flutter_native_splash.yaml
+++ b/flutter_native_splash.yaml
@@ -11,15 +11,15 @@ flutter_native_splash:
   # of your splash screen to a solid color.  Use background_image to set the background of your
   # splash screen to a png image.  This is useful for gradients. The image will be stretch to the
   # size of the app. Only one parameter can be used, color and background_image cannot both be set.
-  color: "#ff102733"
-  #background_image: "assets/background.png"
+  #color: "#ff102733"
+  background_image: "assets/background.png"
 
   # Optional parameters are listed below.  To enable a parameter, uncomment the line by removing
   # the leading # character.
 
   # The image parameter allows you to specify an image used in the splash screen.  It must be a
   # png file and should be sized for 4x pixel density.
-  #image: assets/splash.png
+  image: assets/android.png
 
   # The branding property allows you to specify an image used as branding in the splash screen.
   # It must be a png file. Currently, it is only supported for Android < v12 and iOS.
@@ -50,10 +50,10 @@ flutter_native_splash:
     # 640 pixels in diameter.
     # App icon without an icon background: This should be 1152×1152 pixels, and fit within a circle
     # 768 pixels in diameter.
-    #image: assets/android12splash.png
+    image: assets/android4.png
 
     # Splash screen background color.
-    #color: "#42a5f5"
+    color: "#072935"
 
     # App icon background color.
     #icon_background_color: "#111111"
@@ -67,8 +67,8 @@ flutter_native_splash:
 
   # The android, ios and web parameters can be used to disable generating a splash screen on a given
   # platform.
-  #android: false
-  #ios: false
+  #android: true
+  #ios: true
   #web: false
 
   # The position of the splash image can be set with android_gravity, ios_content_mode, and
