--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   google_maps_flutter: ^2.1.7
   http:
   flutter_gravatar:
+  flutter_launcher_icons:
 
 dev_dependencies:
   flutter_test:
@@ -43,4 +44,9 @@ flutter:
   
   assets:
     - assets/
-    
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
+  adaptive_icon_background: "#072935"
