--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,10 +27,11 @@ dependencies:
   awesome_snackbar_content: ^0.0.5
   firebase_messaging: ^11.4.1
   device_info_plus: ^3.2.4
-  google_maps_flutter: ^2.1.7
   http:
   flutter_gravatar:
   flutter_launcher_icons:
+  map_launcher: ^2.2.3
+  flutter_svg: ^1.1.0
 
 dev_dependencies:
   flutter_test:
@@ -46,7 +47,8 @@ flutter:
     - assets/
 
 flutter_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
   image_path: "assets/icon.png"
+  adaptive_icon_foreground: "assets/android.png"
   adaptive_icon_background: "#072935"
