--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   map_launcher: ^2.2.3
   flutter_svg: ^1.1.0
   firebase_crashlytics: ^2.8.2
+  internet_connection_checker:
 
 dev_dependencies:
   flutter_test:
