--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = eventos_da_rep
+PRODUCT_NAME = Eventos da REP;
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.eventosDaRep
+PRODUCT_BUNDLE_IDENTIFIER = io.github.xuenqui.eventosdarep;
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2022 com.example. All rights reserved.
