--- a/ios/Flutter/Debug.xcconfig
+++ b/ios/Flutter/Debug.xcconfig
@@ -1,2 +1,3 @@
 #include? "Pods/Target Support Files/Pods-Runner/Pods-Runner.debug.xcconfig"
 #include "Generated.xcconfig"
+GOOGLE_SERVICE_REVERSED_CLIENT_ID = "com.googleusercontent.apps.796029474499-ifr4849dlvn3lv1l1jvjaguo4sm44u9j"
