--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -88,7 +88,7 @@ android {
         }
         prod {
             dimension "env"
-            applicationId "io.github.com.xuenqui.eventosdarep"
+            applicationId "io.github.xuenqui.eventosdarep"
         }
     }
 
