--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ dependencies:
   intl: ^0.17.0
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
-  google_sign_in:
+  google_sign_in: ^5.3.3
   package_info_plus: ^1.4.2
   flutter_signin_button: ^2.0.0
   provider: ^6.0.3
@@ -26,10 +26,10 @@ dependencies:
   shared_preferences: ^2.0.15
   awesome_snackbar_content: ^0.0.5
   firebase_messaging: ^11.4.1
-  device_info_plus: ^3.2.4
-  http:
-  flutter_gravatar:
-  flutter_launcher_icons:
+  device_info_plus: ^4.0.0
+  http: ^0.13.4
+  flutter_gravatar: ^2.0.2
+  flutter_launcher_icons: ^0.9.3
   map_launcher: ^2.2.3
   flutter_svg: ^1.1.0
   firebase_crashlytics: ^2.8.2
