--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   modal_bottom_sheet: ^2.0.1
   intl: ^0.17.0
+
+  # firebase
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
   google_sign_in: ^5.3.3
   package_info_plus: ^1.4.2
   flutter_signin_button: ^2.0.0
+
   provider: ^6.0.3
   flutter_native_splash: ^2.2.3
   infinite_scroll_pagination: ^3.2.0
@@ -34,6 +37,10 @@ dependencies:
   flutter_svg: ^1.1.0
   firebase_crashlytics: ^2.8.2
   internet_connection_checker:
+
+  # chat
+  flutter_chat_ui: ^1.6.2
+  flutter_chat_types:
 
 dev_dependencies:
   flutter_test:
