--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: eventos_da_rep
-description: A new Flutter project.
+description: Eventos da REP app.
 
 publish_to: 'none'
 
-version: 1.1.0+3
+version: 1.3.0+4
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
@@ -15,14 +15,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   modal_bottom_sheet: ^2.0.1
   intl: ^0.17.0
-
-  # firebase
   firebase_core: ^1.17.1
   firebase_auth: ^3.3.19
   google_sign_in: ^5.3.3
   package_info_plus: ^1.4.2
   flutter_signin_button: ^2.0.0
-
   provider: ^6.0.3
   flutter_native_splash: ^2.2.3
   infinite_scroll_pagination: ^3.2.0
@@ -37,14 +34,12 @@ dependencies:
   flutter_svg: ^1.1.0
   firebase_crashlytics: ^2.8.2
   internet_connection_checker:
-
-  # chat
   flutter_chat_ui: ^1.6.2
   flutter_chat_types:
-
   flutter_stripe:
-
   money2: ^3.1.3
+  flutter_credit_card_brazilian: ^2.0.0
+  flutter_password_strength: ^0.1.6
 
 dev_dependencies:
   flutter_test:
@@ -63,5 +58,3 @@ flutter_icons:
   android: true
   ios: true
   image_path: "assets/icon2.png"
-  # adaptive_icon_foreground: "assets/android.png"
-  # adaptive_icon_background: "#072935"
