--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: Eventos da REP app.
 
 publish_to: 'none'
 
-version: 1.3.1+5
+version: 1.3.2+6
 
 environment:
   sdk: ">=2.17.1 <3.0.0"
@@ -25,7 +25,7 @@ dependencies:
   infinite_scroll_pagination: ^3.2.0
   shared_preferences: ^2.0.15
   awesome_snackbar_content: ^0.0.5
-  firebase_messaging: ^11.4.1
+  firebase_messaging: ^12.0.1
   device_info_plus: ^4.0.0
   http: ^0.13.4
   flutter_gravatar: ^2.0.2
@@ -40,6 +40,9 @@ dependencies:
   money2: ^3.1.3
   flutter_credit_card_brazilian: ^2.0.0
   flutter_password_strength: ^0.1.6
+  flutter_app_badger: ^1.4.0
+  rxdart: ^0.26.0
+  loading_animation_widget:
 
 dev_dependencies:
   flutter_test:
