--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   rxdart: ^0.27.5
   loading_animation_widget:
   sign_in_with_apple: ^4.1.0
+  device_calendar:
+  flutter_native_timezone: ^2.0.0
 
 dev_dependencies:
   flutter_test:
