--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -57,7 +57,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>Requer acesso à câmera</string>
 	<key>NSCalendarsUsageDescription</key>
-	<string>INSERT_REASON_HERE</string>	
+	<string>Acessar o calendário para vincular os eventos.</string>	
 	<key>NSContactsUsageDescription</key>
 	<string>Access contacts for event attendee editing.</string>
 	<key>UIBackgroundModes</key>
